准备发布动作

--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "serve" : "vue-cli-service serve",
+    "build" : "vue-cli-service build",
+    "lint"  : "vue-cli-service lint",
+    "lib"   : "vue-cli-service build --target lib --name tag-textarea --dest lib packages/index.js"
   },
   "dependencies": {
     "core-js": "^2.6.5",
